    - ALSA: hda/realtek: Apply dual codec quirks for MSI Godlike X570 board
    - net: sfp: VSOL V2801F / CarlitoxxPro CPGOS03-0490 v2.0 workaround
    - net: sfp: add workaround for Realtek RTL8672 and RTL9601C chips

  [ Salvatore Bonaccorso ]
  * Bump ABI to 5
  * [rt] Refresh "printk: remove logbuf_lock"
  * [rt] Refresh "printk: remove safe buffers"

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 05 Mar 2021 17:46:35 +0100

linux (5.10.19-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.10.14
    - [armhf] net: fec: put child node on error path
    - [x86] stmmac: intel: Configure EHL PSE0 GbE and PSE1 GbE to 32 bits DMA
      addressing
    - [armhf] net: dsa: bcm_sf2: put device node before return
    - net: switchdev: don't set port_obj_info->handled true when -EOPNOTSUPP
    - [arm64,armhf] iommu/io-pgtable-arm: Support coherency for Mali LPAE
    - [arm64,armhf] drm/panfrost: Support cache-coherent integrations
    - [arm64] Fix kernel address detection of __is_lm_address()
    - [arm64] Do not pass tagged addresses to __is_lm_address()
    - Revert "x86/setup: don't remove E820_TYPE_RAM for pfn 0"
    - [amd64] iommu/vt-d: Do not use flush-queue when caching-mode is on
    - [x86] platform/x86: touchscreen_dmi: Add swap-x-y quirk for Goodix
      touchscreen on Estar Beauty HD tablet
    - [x86] platform/x86: intel-vbtn: Support for tablet mode on Dell Inspiron
      7352
    - [x86] __always_inline __{rd,wr}msr()
    - scsi: scsi_transport_srp: Don't block target in failfast state
    - scsi: libfc: Avoid invoking response handler twice if ep is already
      completed
    - [x86] scsi: fnic: Fix memleak in vnic_dev_init_devcmd2
    - [x86] ASoC: SOF: Intel: hda: Resume codec to do jack detection
    - ALSA: hda: Add AlderLake-P PCI ID and HDMI codec vid
    - mac80211: fix fast-rx encryption check
    - mac80211: fix encryption key selection for 802.3 xmit