@@ -25,7 +25,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
 
 --- a/arch/arm/kernel/smp.c
 +++ b/arch/arm/kernel/smp.c
-@@ -671,9 +671,7 @@ static void do_handle_IPI(int ipinr)
+@@ -672,9 +672,7 @@
  		break;
  
  	case IPI_CPU_BACKTRACE:
@@ -37,7 +37,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	default:
 --- a/arch/powerpc/kexec/crash.c
 +++ b/arch/powerpc/kexec/crash.c
-@@ -311,9 +311,6 @@ void default_machine_crash_shutdown(stru
+@@ -311,9 +311,6 @@
  	unsigned int i;
  	int (*old_handler)(struct pt_regs *regs);
  
@@ -49,7 +49,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	 * has panicked or is otherwise in a critical state.
 --- a/include/linux/hardirq.h
 +++ b/include/linux/hardirq.h
-@@ -115,7 +115,6 @@ extern void rcu_nmi_exit(void);
+@@ -115,7 +115,6 @@
  	do {							\
  		lockdep_off();					\
  		arch_nmi_enter();				\
@@ -57,7 +57,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  		BUG_ON(in_nmi() == NMI_MASK);			\
  		__preempt_count_add(NMI_OFFSET + HARDIRQ_OFFSET);	\
  	} while (0)
-@@ -134,7 +133,6 @@ extern void rcu_nmi_exit(void);
+@@ -134,7 +133,6 @@
  	do {							\
  		BUG_ON(!in_nmi());				\
  		__preempt_count_sub(NMI_OFFSET + HARDIRQ_OFFSET);	\
@@ -67,7 +67,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	} while (0)
 --- a/include/linux/printk.h
 +++ b/include/linux/printk.h
-@@ -155,18 +155,6 @@ static inline __printf(1, 2) __cold
+@@ -155,18 +155,6 @@
  void early_printk(const char *s, ...) { }
  #endif
  
@@ -185,7 +185,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  
  int console_printk[4] = {
  	CONSOLE_LOGLEVEL_DEFAULT,	/* console_loglevel */
-@@ -227,19 +227,7 @@ static int nr_ext_console_drivers;
+@@ -227,19 +227,7 @@
  
  static int __down_trylock_console_sem(unsigned long ip)
  {
@@ -206,7 +206,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  		return 1;
  	mutex_acquire(&console_lock_dep_map, 0, 1, ip);
  	return 0;
-@@ -248,13 +236,9 @@ static int __down_trylock_console_sem(un
+@@ -248,13 +236,9 @@
  
  static void __up_console_sem(unsigned long ip)
  {
@@ -220,7 +220,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  }
  #define up_console_sem() __up_console_sem(_RET_IP_)
  
-@@ -426,7 +410,7 @@ static struct printk_ringbuffer *prb = &
+@@ -426,7 +410,7 @@
   */
  static bool __printk_percpu_data_ready __read_mostly;
  
@@ -229,7 +229,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  {
  	return __printk_percpu_data_ready;
  }
-@@ -1060,7 +1044,6 @@ void __init setup_log_buf(int early)
+@@ -1061,7 +1045,6 @@
  	struct printk_record r;
  	size_t new_descs_size;
  	size_t new_infos_size;
@@ -237,7 +237,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  	char *new_log_buf;
  	unsigned int free;
  	u64 seq;
-@@ -1958,9 +1941,9 @@ static u16 printk_sprint(char *text, u16
+@@ -1959,9 +1942,9 @@
  }
  
  __printf(4, 0)
@@ -250,7 +250,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  {
  	const u32 caller_id = printk_caller_id();
  	struct prb_reserved_entry e;
-@@ -2106,11 +2089,22 @@ asmlinkage int vprintk_emit(int facility
+@@ -2107,11 +2090,22 @@
  }
  EXPORT_SYMBOL(vprintk_emit);
  
@@ -275,7 +275,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  
  asmlinkage int vprintk(const char *fmt, va_list args)
  {
-@@ -3073,18 +3067,10 @@ void wake_up_klogd(void)
+@@ -3069,18 +3063,10 @@
  	preempt_enable();
  }
  
@@ -299,7 +299,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  int printk_deferred(const char *fmt, ...)
 --- a/kernel/printk/printk_safe.c
 +++ /dev/null
-@@ -1,88 +0,0 @@
+@@ -1,90 +0,0 @@
 -// SPDX-License-Identifier: GPL-2.0-or-later
 -/*
 - * printk_safe.c - Safe printk for printk-deadlock-prone contexts
@@ -318,6 +318,8 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
 -#include "internal.h"
 -
 -static DEFINE_PER_CPU(int, printk_context);
+-
+-static DEFINE_RAW_SPINLOCK(safe_read_lock);
 -
 -#ifdef CONFIG_PRINTK_NMI
 -void noinstr printk_nmi_enter(void)
@@ -390,7 +392,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
 -}
 --- a/kernel/trace/trace.c
 +++ b/kernel/trace/trace.c
-@@ -9325,7 +9325,6 @@ void ftrace_dump(enum ftrace_dump_mode o
+@@ -9295,7 +9295,6 @@
  	tracing_off();
  
  	local_irq_save(flags);
@@ -398,7 +400,7 @@ Signed-off-by: Sebastian Andrzej Siewior <bigeasy@linutronix.de>
  
  	/* Simulate the iterator */
  	trace_init_global_iter(&iter);
-@@ -9405,7 +9404,6 @@ void ftrace_dump(enum ftrace_dump_mode o
+@@ -9375,7 +9374,6 @@
  		atomic_dec(&per_cpu_ptr(iter.array_buffer->data, cpu)->disabled);
  	}
  	atomic_dec(&dump_running);
