@@ -544,6 +544,7 @@ linux (5.10.21-1) UNRELEASED; urgency=medium
   * Bump ABI to 5
   * [rt] Refresh "printk: remove logbuf_lock"
   * [rt] Refresh "printk: remove safe buffers"
+  * [rt] Refresh "printk: remove deferred printing"
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 05 Mar 2021 17:46:35 +0100
 
